fixed typos and added online resume

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <p>I grew up on a small farm in rural Minnesota. There was always work to be done around the farm, but whenever I had a free moment
               you could find me in my garage, tinkering with electronics at my workbench. I graduated from North Dakota State University with a CS degree in 2017. After graduation,
-              I spent some time in Central America attending an intensive language school. I enjoy Running, Mountain Biking, Hiking, Jet-skiing, Bungee-jumping, Cliff Diving, Cycling, and traveling whenever
+              I spent some time in Central America attending an intensive language school before moving to the bay area to pursue Software Development. I enjoy Running, Mountain Biking, Hiking, Jet-skiing, Bungee-jumping, Cliff Diving, Cycling, and traveling whenever
               possible. My StrengthsFinder strengths are: <b>Activator, Relator, Individualization, Focus, and Ideation</b>.
 
             </p>
@@ -126,7 +126,7 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Christopher Bigelow</span>
-						   <span><br>Fargo, ND 58102</span><br>
+						   <span><br>San Francisco, CA</span><br>
 						   <span>chris.bigelow@outlook.com</span>
 					   </p>
 
@@ -134,7 +134,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="Chris_Bigelow_Resume.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="./resume/resume.html" class="button"><i class="fa fa-file-text-o"></i>Access Online Resume</a>
                   </p>
                </div>
 
@@ -288,12 +288,14 @@
 				<div>
 
           <ul style="list-style-type:square">
+             <li>Ruby on Rails (proficient)</li>
+             <li>Javascript (proficient)</li>
+             <li>React.js (proficient)</li>
 					   <li>Java	(proficient)</li>
              <li>C#	(proficient)</li>
              <li>Visual Basic (proficient)</li>
              <li>Objective-C (proficient)</li>
              <li>C++ (prior experience)</li>
-             <li>Ruby (prior experience)
              <li>Python	(prior experience)</li>
              <li>HTML	(prior experience)</li>
              <li>CSS	(prior experience)</li>
@@ -722,10 +724,10 @@
 
                <div class="widget widget_contact">
 
-					   <h4>Address and Phone</h4>
+					   <h4>Contact</h4>
 					   <p class="address">
 						   Christopher Bigelow<br>
-						   Fargo, ND 58102<br>
+						   San Francisco, CA<br>
 						   <span>chris.bigelow@outlook.com</span>
 					   </p>
 
