changed resume and took out project section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2>About Me</h2>
 
             <p>I grew up on a small farm in rural Minnesota. There was always work to be done around the farm, but whenever I had a free moment
-              you could find me in my garage, tinkering with electronics at my workbench. I graduated from North Dakota State University with a CS degree in 2017. After graduation,
+              you could find me in my garage, tinkering with electronics at my workbench or programming on my computer. I graduated from North Dakota State University with a CS degree in 2017. After graduation,
               I spent some time in Central America attending an intensive language school before moving to the bay area to pursue Software Development. I enjoy Running, Mountain Biking, Hiking, Jet-skiing, Bungee-jumping, Cliff Diving, Cycling, and traveling whenever
               possible. My StrengthsFinder strengths are: <b>Activator, Relator, Individualization, Focus, and Ideation</b>.
 
@@ -217,9 +217,9 @@
 
                  <p>
                  <ul style="list-style-type:square">
-                   <li>Worked with a small team to develop IOS App</li>
-                   <li>Built management tools in C#/WPF for hardware devices</li>
-                   <li>IoT platform design and development</li>
+                  <li>Developed iOS app with team of 3 for gathering key metrics on agriculture systems</li>
+                  <li>Built and maintained management tools using C#/WPF for IoT gateway devices</li>
+                  <li>Renovated front-end IoT portal in HTML5, CSS and JS</li>
                  </ul>
                  </p>
 
@@ -236,10 +236,9 @@
 
                   <p>
                   <ul style="list-style-type:square">
-                    <li>Worked	with	teams	of	engineers	to test	Boeing 737 Flight Management System software</li>
-                    <li>Wrote	scripts	in	Visual	Basic	to	test	different	parts	of	the	FMS	software</li>
-                    <li>Used	FMS	Simulator	to	execute	tests	on	code</li>
-                    <li>Familiarized	myself	with	all	aspects	of	FMS	system	for	manual	tests</li>
+                    <li>Tested Boeing 737 Flight Management System Software</li>
+                    <li>Composed and batched test scripts in Visual Basic to automate simulations</li>
+                    <li>Ran manual flight tests in FMS simulator</li>
                   </ul>
                   </p>
 
@@ -257,9 +256,9 @@
 
                   <p>
                   <ul style="list-style-type:square">
-                    <li>Worked	with	team	of	professionals	to	build	airport	map for	aircraft	navigation</li>
-                    <li>Organized	projects,	met	deadlines,	and	followed	required	procedures	for	customer</li>
-                    <li>Solved	imagery	problems	and	worked	with	my	teammates	to	acquire	solutions</li>
+                    <li>Constructed airport moving maps for aircraft navigation</li>
+                    <li>Mapped over 30 airports in 5 different countries</li>
+                    <li>Helped develop mapping software tools to increase productivity</li>
                   </ul>
                   </p>
 
@@ -311,16 +310,16 @@
 
 
 
-   <section id="portfolio">
+   <!-- <section id="portfolio">
 
       <div class="row">
 
          <div class="twelve columns collapsed">
 
-            <h1>Past Projects:</h1>
+            <h1>Past Projects:</h1> -->
 
             <!-- portfolio-wrapper -->
-           <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+           <!-- <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -337,9 +336,9 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div>
 
-             <div class="columns portfolio-item">
+             <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
@@ -354,7 +353,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> 
 
               <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -447,7 +446,7 @@
               <!-- </div> <!-- twelve columns end -->
 
 
-         <div id="modal-01" class="popup-modal mfp-hide">
+         <!-- <div id="modal-01" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="pmsp.jpg" alt="" />
 
@@ -460,9 +459,9 @@
             <div class="link-box">
                <a href="http://www.poormansspaceprogram.com">Website</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-01 End -->
+	      <!-- </div>
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
@@ -479,9 +478,9 @@
             <div class="link-box">
                <a href="JuniperVideo.mp4">Download Video Demo</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-02 End -->
+	      <!-- </div>
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
@@ -500,7 +499,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-03 End -->
+	      </div> -->
 
 
 	    <!--  </div><!-- modal-04 End -->
