added link and icon

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                <li><a href="https://github.com/chrisbigelow"><i class="fa fa-github"></i></a></li>
             </ul>
             <ul class="pmsp">
-              <li><a href="https://poormansspaceprogram.com"><img src="smallicon.png"</a></li>
+                <li><a href="https://chrisbigelow.io"><img src="cb.png"</a></li>
+              <li><a href="https://chrisbigelow.io/space"><img src="smallicon.png"</a></li>
               <li><a href="https://www.thepragmaticvoyager.com"><img src="small.png"</a></li>
             </ul>
          </div>
