--- a/resume/resume.html
+++ b/resume/resume.html
@@ -119,7 +119,7 @@
             <div>
               <ul>
                 <li>Javascript Application utilizing Node.js backend for API calls</li>
-                <li>Uses Twitter API to fetch tweets pertining to a specific query</li>
+                <li>Uses Twitter API to fetch tweets pertaining to a specific query</li>
                 <li>Sends tweets to IBM's Tone Analyzer API to retrieve tweet sentiment</li>
               </ul>
             </div>
