changed first project on resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -94,14 +94,14 @@
           </div>
           <div class="details">
             <header>
-              <a href="https://github.com/chrisbigelow/soundstand"><h3>SoundStand</h3></a>
-              <span class="place">Full-stack web application - (React, Redux, Rails)</span>
+              <a href="https://github.com/reidjs/onionup"><h3>OnionUp</h3></a>
+              <span class="place">Full-stack web application - (Vue.js, Vuex, Rails)</span>
             </header>
             <div>
               <ul>
                 <li>Hand-rolled user authentication</li>
-                <li>Used Paperclip gem along with AWS S3 to upload music files to the cloud</li>
-                <li>Created custom HTML5 audio player for continuous play between pages</li>
+                <li>Pings onion hidden services and websites for website health information</li>
+                <li>Used AWS EC2 instance to run an onion proxy server for all pings</li>
               </ul>
             </div>
           </div>
@@ -221,9 +221,9 @@
         <h1>
           Contact Info
         </h1>
-        <ul> 
+        <ul>
           <a href="http://chbigelow.com"><li><i class="fa fa-globe"></i> chbigelow.com</li></a>
-          <a href="http://github.com/chrisbigelow"><li><i class="fa fa-github"></i> github.com/chrisbigelow</li></a>  
+          <a href="http://github.com/chrisbigelow"><li><i class="fa fa-github"></i> github.com/chrisbigelow</li></a>
           <a href="http://linkedin.com/in/chbigelow"><li><i class="fa fa-linkedin"></i> linkedin.com/in/chbigelow</li></a>
           <a href="mailto:chris.bigelow@outlook.com"<li><i class="fa fa-envelope"></i> chris.bigelow@outlook.com</li></a>
           <li><i class="fa fa-phone"></i> 218.790.2221</li>
