--- a/index.html
+++ b/index.html
@@ -674,39 +674,9 @@
 
             <div class="eight columns">
 
-               <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
-					<fieldset>
-
-                  <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactName" name="contactName">
-                  </div>
-
-                  <div>
-						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
-                  </div>
-
-                  <div>
-						   <label for="contactSubject">Subject</label>
-						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
-                  </div>
-
-                  <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
-                  </div>
-
-					</fieldset>
-				   </form> <!-- Form End -->
+               <!-- www.123formbuilder.com script begins here -->
+<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3471518.js" data-role="form" data-default-width="650px"></script>
+<p>Powered by <a class="footerLink13" title="123FormBuilder" href="https://www.123formbuilder.com">123FormBuilder</a> | <a style="font-size:small!important;color:#000000!important; text-decoration:underline!important;" title="Looks like phishing? Report it!" href="http://www.123formbuilder.com/sfnew.php?s=123contactform-52&control119314=///contact-form--3471518.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p><!-- www.123formbuilder.com script ends here -->
 
                <!-- contact-warning -->
                <div id="message-warning"> Error boy</div>
