--- a/resume/resume.html
+++ b/resume/resume.html
@@ -16,11 +16,11 @@
       </header>
       <section class="main-block">
         <h2>
-          <i class="fa fa-suitcase"></i> Experiences
+          <i class="fa fa-suitcase"></i> Job Experience
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>Dec 2016</span><span>May 2016</span>
+            <span>May 2016</span><span>Dec 2016</span>
           </div>
           <div class="decorator">
           </div>
@@ -41,7 +41,7 @@
         </section>
         <section class="blocks">
           <div class="date">
-            <span>Aug 2014</span><span>May 2014</span>
+            <span>May 2014</span><span>Aug 2014</span>
           </div>
           <div class="decorator">
           </div>
@@ -62,7 +62,7 @@
         </section>
         <section class="blocks">
           <div class="date">
-            <span>Jan<br>2013</span><span>May 2011</span>
+            <span>May 2011</span><span>Jan<br>2013</span>
           </div>
           <div class="decorator">
           </div>
